--- a/index.html
+++ b/index.html
@@ -218,8 +218,6 @@
         runAsync().start();
     })();
     </script>
-
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=31707898" charset="UTF-8"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -228,6 +226,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-47254607-2', 'liqianqian5201314.github.io');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
