--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ y:```./oso:..---:/+sssyyyyyysso++++oosyyhddddddddddddddddddddddddddddddddddm:.``
   ga('create', 'UA-47254607-2', 'liqianqian5201314.github.io');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
-  ga(‘set’, ‘&uid’, {{USER_ID}});
+  ga('set', '&uid', {{USER_ID}});
 
 </script>
 
